--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-Flask==2.2.2
 pandas==1.5.3
 numpy==1.23.5
 keras==2.12.0
 scikit-learn==1.2.2
 gunicorn==20.1.0
 werkzeug==2.2.3
-Flask>=2.3.0
+Flask
